@@ -4,6 +4,7 @@
 
 3.0 bertsioa
 ================
+- Bergara aldeko hiztegia kontsultagai dago. (#37)
 - CorpEus gehitu zaio barrari. (#42) (#46)
 - Kontsulta konbinatuetan azpisarreren kontsulta gaitzeko edo ezgaitzeko hobespena sortu da. (#41)
 - Kontsulta konbinatuetan Elhuyarren eta 3000ren azpisarrerak ere kontsultatzen dira. (#26)
